codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__agent_picker_tests__agent_picker_normal_width.snap
---
source: tui/src/app/tests/agent_picker_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 96)"
---
  Subagents
  Select an agent to watch. ⌥+← previous, ⌥+→ next.

  Search subagents

› • Planner [worker] (current)              idle context 4800 / 32000 (15%) · Finished the
                                            dependency review and recorded the recommendation.
  • /agents/review/long-running-test-agent  mid-turn context ?
  • Closed [worker]                         closed context ?
  • Error [worker]                          error context ?

  enter select · esc back
